--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
     <script src="assets/js/blockchain.js"></script>
     <script src="assets/js/blockies.js"></script>    
     <script src="assets/js/blockies_optimizations.js"></script> 
-   
+   <!-- <script src="assets/js/vue-submit.min.js"></script> -->
+  <script src="assets/js/vue-submit.js"></script>
+  <script src="https://unpkg.com/vue@2.4.2"></script>
 
   </head>
   <body>
